Updated Readme, added link to new project home

--- a/README
+++ b/README
@@ -24,6 +24,8 @@ Note: Minor version 0.2 will be the first official version released to the publi
 
 1.0: The non-beta, 1.0 official release of this extension will come along with a newly released web service that will allow you to manage your links in a web interface as well as track version history and enable undo/redo for any mistakes you may have made accidentally deleting a link from your tab page. 
 
+This project's home can be found at http://www.refreshedweb.com/projects/newtab/
+
 Get excited, people. Convenience and raw awesomeness are on the way :)
 
 --Pierce
